--- a/resources/assets/templates/_raduga/css/style.css
+++ b/resources/assets/templates/_raduga/css/style.css
@@ -613,27 +613,27 @@ hr { border-color:#8c8f92; }
 		padding-left: 0;
 		padding-right: 0;
 	}
-    #owl-product .item {
+    .owl-carousel .item {
 		padding-left: 5px;
 		padding-right: 5px;
     }
-	#owl-product .owl-controls {
+	.owl-carousel .owl-controls {
 		margin: 0;
 	}
-		#owl-product .owl-controls .owl-buttons div {
+		.owl-carousel .owl-controls .owl-buttons div {
 			position: absolute;
 			background: none;
 			font-size: 26px;
 		}	
-		#owl-product .owl-controls .owl-buttons .owl-prev, 
-		#owl-product .owl-controls .owl-buttons .owl-next {
+		.owl-carousel .owl-controls .owl-buttons .owl-prev,
+		.owl-carousel .owl-controls .owl-buttons .owl-next {
 			top: -61px;
 			color: #fff;
 		}
-		#owl-product .owl-controls .owl-buttons .owl-prev {
+		.owl-carousel .owl-controls .owl-buttons .owl-prev {
 			right: 60px;
 		}	 
-		#owl-product .owl-controls .owl-buttons .owl-next {
+		.owl-carousel .owl-controls .owl-buttons .owl-next {
 			right: 20px;
 		}		
 	
