--- a/resources/assets/templates/_raduga/css/style.css
+++ b/resources/assets/templates/_raduga/css/style.css
@@ -397,7 +397,6 @@ hr { border-color:#8c8f92; }
 		}
 		.product-col {
 			margin-bottom: 20px;
-			padding: 15px 15px 10px;
 			background: #fff;
 			border: 1px solid #e8e8e8;
 		}
@@ -406,7 +405,7 @@ hr { border-color:#8c8f92; }
 				float: left;
 			}
 		.product-col .caption {
-			padding-top: 10px;
+			padding: 10px 15px;
 		}
 			.product-col h4 {
 				font-size: 18px;
