Добавит функционл фото360/3D
Установлена баиблиотека Tridi

--- a/resources/assets/templates/_raduga/css/app.scss
+++ b/resources/assets/templates/_raduga/css/app.scss
@@ -1,4 +1,5 @@
 @import '~font-awesome/scss/font-awesome';
+@import '~tridi/dist/css/tridi';
 @import 'magnific-popup';
 @import 'owl.carousel';
 @import 'style';
