Атрибут корзины влияет на цену.
Теперь атрибутам корзины можно указывать стоимость, которую нужно добавить к товару.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21375,6 +21375,10 @@ hr {
   color: #fff;
 }
 
+.price-old {
+  text-decoration: line-through;
+}
+
 /* Header Area Styles Starts */
 
 #header-area {
@@ -21769,7 +21773,6 @@ hr {
 .product-col .price span.price-old {
   color: #808080;
   font-size: 18px;
-  text-decoration: line-through;
 }
 
 .product-col .btn-wishlist,
