Заменен гл.стр. банер на слайдер

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21994,12 +21994,12 @@ hr {
 
 .owl-carousel .owl-controls .owl-buttons .owl-prev,
 .owl-carousel .owl-controls .owl-buttons .owl-next {
-  top: -61px;
+  top: 200px;
   color: #fff;
 }
 
 .owl-carousel .owl-controls .owl-buttons .owl-prev {
-  right: 60px;
+  left: 20px;
 }
 
 .owl-carousel .owl-controls .owl-buttons .owl-next {
