--- a/resources/assets/templates/_kp/css/styles.css
+++ b/resources/assets/templates/_kp/css/styles.css
@@ -81,17 +81,6 @@ ul
 	list-style: none;
 	margin-bottom: 0px;
 }
-p
-{
-	font-family: 'Rubik', sans-serif;
-	font-size: 14px;
-	line-height: 1.7;
-	font-weight: 400;
-	color: #828282;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
-	text-shadow: rgba(0,0,0,.01) 0 0 1px;
-}
 p a
 {
 	display: inline;
@@ -2206,6 +2195,16 @@ select option
 11. Single Product
 *********************************/
 
+.single_product .product_parameter_name
+{
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAABCAAAAAA+i0toAAAAAnRSTlMA/1uRIrUAAAAMSURBVHheY7j1/z8ABY8C2UtBe8oAAAAASUVORK5CYII=) 0px 14px repeat-x
+}
+
+.single_product .product_parameter_name span
+{
+	background-color: #ffffff;
+}
+
 .single_product .image_list li
 {
 	display: -webkit-box;
@@ -2271,11 +2270,7 @@ select option
 {
 	padding-left: 50px;
 }
-.single_product .product_category
-{
-	font-size: 12px;
-	color: rgba(0,0,0,0.5);
-}
+
 .single_product .product_name
 {
 	font-size: 30px;
