--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27289,12 +27289,11 @@ section {
 .header_search_input {
   display: block;
   position: relative;
-  width: calc((100% - 50px) * 0.601);
+  width: 100%;
   height: 100%;
   line-height: 50px;
   border: none !important;
   outline: none !important;
-  padding-left: 26px;
   color: #7f7f7f;
   float: left;
 }
@@ -31386,10 +31385,6 @@ ul.child {
 ************/
 
 @media only screen and (max-width: 991px) {
-  .top_bar {
-    /*display: none;*/
-  }
-
   .header_search {
     height: 50px;
   }
@@ -31617,10 +31612,6 @@ ul.child {
 ************/
 
 @media only screen and (max-width: 767px) {
-  .header_search {
-    display: none;
-  }
-
   .page_menu_search {
     display: block;
   }
@@ -31740,10 +31731,6 @@ ul.child {
     font-size: 13px;
   }
 
-  .top_bar {
-    display: none;
-  }
-
   .logo_container,
   .wishlist_cart {
     height: 72px;
@@ -31830,10 +31817,6 @@ ul.child {
 
   .top_bar_user {
     margin-left: 0px;
-  }
-
-  .header_search {
-    display: none;
   }
 
   .main_nav {
