--- a/resources/assets/templates/_kp/css/styles.css
+++ b/resources/assets/templates/_kp/css/styles.css
@@ -562,12 +562,11 @@ section
 {
 	display: block;
 	position: relative;
-	width: calc((100% - 50px) * 0.601);
+	width: 100%;
 	height: 100%;
 	line-height: 50px;
 	border: none !important;
 	outline: none !important;
-	padding-left: 26px;
 	color: #7f7f7f;
 	float: left;
 }
