Улучшен процесс расчета доставки и оформления заказа: 1.К каждому способу доставки можно указать срок обработки заказа.  Этот срок прибавится к расчетному времени доставки. 2.К каждому способу доставки можно добавить доп.налог в процентах от суммы заказа или фиксированный размер.  Этот налог добавится к расчетной стоимости доставки. 3.К каждому способу оплаты можно добавить доп.налог или доп.скидку (отрицательное значение) в процентах от суммы заказа или фиксированный размер.  Скидка или налог отразится дополнительным полем в заказе

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27286,10 +27286,6 @@ p a:hover::after {
   opacity: 0.2;
 }
 
-.form-control {
-  color: #db5246;
-}
-
 section {
   display: block;
   position: relative;
@@ -31643,6 +31639,10 @@ html {
 body {
   font-family: arial;
   font-size: 0.8rem;
+}
+
+.form-control {
+  color: #0b0b0b !important;
 }
 
 .icon {
